# HB-DRM-free-bulk-downloader

./: .gitignore  DownloadLinkExtractor.js  LOG-all.txt  RUN.bat  RUN.sh  config.toml.example  links.txt  pyproject.toml
docs/superpowers/plans/: 2026-03-27-hb-downloader-python-migration.md
docs/superpowers/specs/: 2026-03-27-hb-downloader-python-migration-design.md
hb_downloader/: __main__.py  api.py  cli.py  config.py  downloader.py  logger.py
hb_drm_free_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_downloader.py  test_logger.py
